--- a/optui/public/user.html
+++ b/optui/public/user.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<script src="js/vue.js"></script>
+	<script src="js/zxcvbn.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
@@ -30,9 +31,10 @@
 						<label for="password">Password</label>
 						<input required type="password" class="form-control" id="password" placeholder="Password" v-model="password">
 					</div>
-					<div class="form-group" hhv-show="mode=='register'">
+					<div class="form-group" v-show="mode=='register'">
 						<label for="password_verify" >Re-enter Password</label>
-						<input :required="mode=='register'" type="password" class="form-control" id="password_verify" placeholder="Re-enter Password" v-model="password_verify">
+						<input :required="mode=='register'" type="password" class="form-control" 
+							id="password_verify" placeholder="Re-enter Password" v-model="password_verify">
 					</div>
 					<button type="submit" class="btn btn-primary">{{mode.charAt(0).toUpperCase() + mode.slice(1)}}</button>
 				</form>
