--- a/optui/public/timer.html
+++ b/optui/public/timer.html
@@ -5,21 +5,61 @@
 
   <meta charset="utf-8">
   <title>Emailtopia Poker Timer</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Mono:400,700" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Mono:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/timer.css">
   <script src="js/vue.js"></script>
 
   <script type="text/javascript">
 
-    function startTimer(duration, display) {
-      var start = Date.now(),
+    currentGame = {
+      "user": "hlach@emailtopia.com",
+      "startTime": "4:45:34",
+      "paused": false,
+      "currentPausedStartTime": "00:00:34",
+      "currentLevelTime": 10,
+      "currentLevel": 6,
+      "blindScheduleName": "Office Turbo",
+      "levels": [
+        { "level": 1, "smallBlind": 5, "bigBlind": 10, "ante": 0, "duration": 11 },
+        { "level": 2, "smallBlind": 10, "bigBlind": 20, "ante": 0, "duration": 12 },
+        { "level": 3, "smallBlind": 25, "bigBlind": 50, "ante": 5, "duration": 13 },
+        { "level": 4, "smallBlind": 50, "bigBlind": 100, "ante": 10, "duration": 14 },
+        { "level": 5, "smallBlind": 75, "bigBlind": 150, "ante": 10, "duration": 25 },
+        { "level": 6, "smallBlind": 100, "bigBlind": 200, "ante": 25, "duration": 16 },
+        { "level": 7, "smallBlind": 150, "bigBlind": 300, "ante": 25, "duration": 17 },
+        { "level": 8, "smallBlind": 200, "bigBlind": 400, "ante": 25, "duration": 18 },
+        { "level": 9, "smallBlind": 300, "bigBlind": 600, "ante": 50, "duration": 19 },
+        { "level": 10, "smallBlind": 400, "bigBlind": 800, "ante": 50, "duration": 20 },
+        { "level": 11, "smallBlind": 500, "bigBlind": 1000, "ante": 100, "duration": 21 },
+        { "level": 12, "smallBlind": 700, "bigBlind": 1400, "ante": 100, "duration": 22 },
+        { "level": 13, "smallBlind": 1000, "bigBlind": 2000, "ante": 200, "duration": 23 },
+        { "level": 14, "smallBlind": 1500, "bigBlind": 3000, "ante": 300, "duration": 24 },
+        { "level": 15, "smallBlind": 2000, "bigBlind": 4000, "ante": 400, "duration": 7 },
+        { "level": 16, "smallBlind": 3000, "bigBlind": 6000, "ante": 600, "duration": 8 }
+      ]
+    }
+
+    var currentLevel = currentGame.currentLevel;
+    var currentLevelTime = currentGame.currentLevelTime;
+    var currentSmallBlind = currentGame.levels[currentLevel - 1].smallBlind;
+    var currentBigBlind = currentGame.levels[currentLevel - 1].bigBlind;
+    var currentAnte = currentGame.levels[currentLevel - 1].ante;
+    var isPaused = currentGame.paused;
+
+    function startTimer(duration, timerDisplay) {
+      var start = performance.now(),
         diff,
         minutes,
         seconds;
+
+      var countDownSound = new Audio('sounds/Robot_blip-Marianne_Gagnon-120342607.mp3');
+      var levelStartSound = new Audio('sounds/Censored_Beep-569981218.mp3');
+
+      duration += 1; // add one second so that the count down starts at the full duration
       function timer() {
         // get the number of seconds that have elapsed since 
         // startTimer() was called
-        diff = duration - (((Date.now() - start) / 1000) | 0);
+        diff = duration - (((performance.now() - start) / 1000) | 0);
 
         // does the same job as parseInt truncates the float
         minutes = (diff / 60) | 0;
@@ -28,23 +68,83 @@
         minutes = minutes < 10 ? minutes : minutes;
         seconds = seconds < 10 ? "0" + seconds : seconds;
 
-        display.textContent = minutes + ":" + seconds;
+        timerDisplay.textContent = minutes + ":" + seconds;
 
-        if (diff <= 0) {
-          // add one second so that the count down starts at the full duration
-          // example 05:00 not 04:59
-          start = Date.now() + 1000;
+        document.addEventListener("keypress", function () {
+          clearInterval(currInterval);
+          document.addEventListener("keypress", function () {
+            window.location.reload(true);
+          })
+
+        });
+
+        if (diff < 6) {
+          countDownSound.play();
+        }
+
+        if (diff <= 1) {
+          start = performance.now();
+          duration = getNextLevelTime();
+          if (duration == "GameOver") {
+            clearInterval(currInterval);
+            document.querySelector('#time').textContent = "DONE";
+          } else {
+            currentSmallBlind = currentGame.levels[currentLevel - 1].smallBlind;
+            currentBigBlind = currentGame.levels[currentLevel - 1].bigBlind;
+            currentAnte = currentGame.levels[currentLevel - 1].ante;
+            displayInfo();
+            levelStartSound.play();
+          }
         }
       };
-      // we don't want to wait a full second before the timer starts
-      timer();
-      setInterval(timer, 1000);
+
+      var currInterval = setInterval(timer, 1000);
+      // clear the interval timer if the pause button is pushed
+      // document.querySelector('#pause').addEventListener('click', function () {
+      //   alert("hello");
+      //   clearInterval(currInterval);
+      // });
+
+    } // end of StartTimer
+
+    function getNextLevelTime() {
+      currentLevel++;
+      if (currentLevel > currentGame.levels.length) {
+        return "GameOver";
+      }
+      return currentGame.levels[currentLevel - 1].duration;
+    }
+
+    function displayInfo() {
+      var blindsDisplay = document.querySelector('#blindValues'),
+        anteDisplay = document.querySelector('#anteValue'),
+        levelDisplay = document.querySelector('#level');
+
+      blindsDisplay.textContent = currentSmallBlind + "/" + currentBigBlind;
+      anteDisplay.textContent = currentAnte;
+      levelDisplay.textContent = currentLevel;
+
     }
 
     window.onload = function () {
-      var sevenMinutes = 60 * 7,
-        display = document.querySelector('#time');
-      startTimer(sevenMinutes, display);
+      var timerDisplay = document.querySelector('#time');
+
+      displayInfo(); //display the blinds,ante, and level
+
+      if (isPaused == true) {
+        // display the timer in its paused state
+        // does the same job as parseInt truncates the float
+        minutes = (currentLevelTime / 60) | 0;
+        seconds = (currentLevelTime % 60) | 0;
+        minutes = minutes < 10 ? minutes : minutes;
+        seconds = seconds < 10 ? "0" + seconds : seconds;
+        timerDisplay.textContent = minutes + ":" + seconds;
+
+        // display a PAUSED overlay on screen
+        document.getElementById("gamePausedOverlay").style.visibility = "visible";
+      } else {
+        startTimer(currentLevelTime, timerDisplay);
+      }
     };
 
   </script>
@@ -55,21 +155,32 @@
   <page>
 
     <controls>
-      Play/Pause | New Game
+      <div>Level:
+        <span id="level"></span>
+      </div>
+      <div>
+        New Game
+      </div>
     </controls>
 
     <timer id="time">
-     
+
     </timer>
 
     <currentBlindsAndAnte>
-      <blinds>Blinds: 25/50</blinds>
-      <ante>Ante: 5</ante>
+      <blinds>Blinds:
+        <span id="blindValues"></span>
+      </blinds>
+      <ante>Ante:
+        <span id="anteValue"></span>
+      </ante>
     </currentBlindsAndAnte>
 
     <branding>
       <img src="img/emailtopia_logo-white-on-transparent.png" class="logo">
     </branding>
+
+    <div id="gamePausedOverlay">PAUSED</div>
 
   </page>
 </body>
