--- a/optui/public/timer.html
+++ b/optui/public/timer.html
@@ -8,43 +8,82 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Mono:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/timer.css">
   <script src="js/vue.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <script type="text/javascript">
 
-    currentGame = {
-      "user": "hlach@emailtopia.com",
-      "startTime": "4:45:34",
-      "paused": false,
-      "currentPausedStartTime": "00:00:34",
-      "currentLevelTime": 10,
-      "currentLevel": 6,
-      "blindScheduleName": "Office Turbo",
-      "levels": [
-        { "level": 1, "smallBlind": 5, "bigBlind": 10, "ante": 0, "duration": 11 },
-        { "level": 2, "smallBlind": 10, "bigBlind": 20, "ante": 0, "duration": 12 },
-        { "level": 3, "smallBlind": 25, "bigBlind": 50, "ante": 5, "duration": 13 },
-        { "level": 4, "smallBlind": 50, "bigBlind": 100, "ante": 10, "duration": 14 },
-        { "level": 5, "smallBlind": 75, "bigBlind": 150, "ante": 10, "duration": 25 },
-        { "level": 6, "smallBlind": 100, "bigBlind": 200, "ante": 25, "duration": 16 },
-        { "level": 7, "smallBlind": 150, "bigBlind": 300, "ante": 25, "duration": 17 },
-        { "level": 8, "smallBlind": 200, "bigBlind": 400, "ante": 25, "duration": 18 },
-        { "level": 9, "smallBlind": 300, "bigBlind": 600, "ante": 50, "duration": 19 },
-        { "level": 10, "smallBlind": 400, "bigBlind": 800, "ante": 50, "duration": 20 },
-        { "level": 11, "smallBlind": 500, "bigBlind": 1000, "ante": 100, "duration": 21 },
-        { "level": 12, "smallBlind": 700, "bigBlind": 1400, "ante": 100, "duration": 22 },
-        { "level": 13, "smallBlind": 1000, "bigBlind": 2000, "ante": 200, "duration": 23 },
-        { "level": 14, "smallBlind": 1500, "bigBlind": 3000, "ante": 300, "duration": 24 },
-        { "level": 15, "smallBlind": 2000, "bigBlind": 4000, "ante": 400, "duration": 7 },
-        { "level": 16, "smallBlind": 3000, "bigBlind": 6000, "ante": 600, "duration": 8 }
-      ]
+    var currentGame = getGameData();
+    var timerDisplay = document.querySelector('#time');
+
+    var currentLevel,
+      currentLevelTime,
+      currentSmallBlind,
+      currentBigBlind,
+      currentAnte,
+      isPaused;
+
+    // set up game variables after ajax call has finished
+    function setupGameVariables() {
+      currentLevel = currentGame.currentLevel;
+      currentLevelTime = currentGame.currentLevelTime;
+      currentSmallBlind = currentGame.levels[currentLevel - 1].smallBlind;
+      currentBigBlind = currentGame.levels[currentLevel - 1].bigBlind;
+      currentAnte = currentGame.levels[currentLevel - 1].ante;
+      isPaused = currentGame.paused;
     }
 
+    function getGameData() {
+      return $.ajax({
+        url: "games/Sam", async: true, cache: false, success: function (result) {
+          currentGame = JSON.parse(result);
+        },
+        error: function (xhr, status, error) {
+          $(function () {
+            $("#dataErrorOverlay").show();
+            $("page").css({ 'filter': 'blur(4px)' });
+          });
+        }
+      });
+    }
+
+    // assign game values to vars
     var currentLevel = currentGame.currentLevel;
     var currentLevelTime = currentGame.currentLevelTime;
     var currentSmallBlind = currentGame.levels[currentLevel - 1].smallBlind;
     var currentBigBlind = currentGame.levels[currentLevel - 1].bigBlind;
     var currentAnte = currentGame.levels[currentLevel - 1].ante;
     var isPaused = currentGame.paused;
+    var timerDisplay = document.querySelector('#time');
+
+
+    // currentGame = {
+    //   "user": "hlach@emailtopia.com",
+    //   "startTime": "4:45:34",
+    //   "paused": false,
+    //   "currentPausedStartTime": "00:00:34",
+    //   "currentLevelTime": 10,
+    //   "currentLevel": 6,
+    //   "blindScheduleName": "Office Turbo",
+    //   "levels": [
+    //     { "level": 1, "smallBlind": 5, "bigBlind": 10, "ante": 0, "duration": 11 },
+    //     { "level": 2, "smallBlind": 10, "bigBlind": 20, "ante": 0, "duration": 12 },
+    //     { "level": 3, "smallBlind": 25, "bigBlind": 50, "ante": 5, "duration": 13 },
+    //     { "level": 4, "smallBlind": 50, "bigBlind": 100, "ante": 10, "duration": 14 },
+    //     { "level": 5, "smallBlind": 75, "bigBlind": 150, "ante": 10, "duration": 25 },
+    //     { "level": 6, "smallBlind": 100, "bigBlind": 200, "ante": 25, "duration": 16 },
+    //     { "level": 7, "smallBlind": 150, "bigBlind": 300, "ante": 25, "duration": 17 },
+    //     { "level": 8, "smallBlind": 200, "bigBlind": 400, "ante": 25, "duration": 18 },
+    //     { "level": 9, "smallBlind": 300, "bigBlind": 600, "ante": 50, "duration": 19 },
+    //     { "level": 10, "smallBlind": 400, "bigBlind": 800, "ante": 50, "duration": 20 },
+    //     { "level": 11, "smallBlind": 500, "bigBlind": 1000, "ante": 100, "duration": 21 },
+    //     { "level": 12, "smallBlind": 700, "bigBlind": 1400, "ante": 100, "duration": 22 },
+    //     { "level": 13, "smallBlind": 1000, "bigBlind": 2000, "ante": 200, "duration": 23 },
+    //     { "level": 14, "smallBlind": 1500, "bigBlind": 3000, "ante": 300, "duration": 24 },
+    //     { "level": 15, "smallBlind": 2000, "bigBlind": 4000, "ante": 400, "duration": 7 },
+    //     { "level": 16, "smallBlind": 3000, "bigBlind": 6000, "ante": 600, "duration": 8 }
+    //   ]
+    // }
+
 
     function startTimer(duration, timerDisplay) {
       var start = performance.now(),
@@ -107,30 +146,15 @@
 
     } // end of StartTimer
 
-  //ajax call generic
-    function ajaxCall(method,url) {
-      $.ajax({
-           url: url,
-           error: function(xhr, statusText, err) {
-             response = "error"+xhr.status;
-             return response;
-           },
 
-           success: function(data) {
-            return data;
-           },
-           type: method
-        });
-    }
-    
     // pause button clicked (clock stop not added)
     function pauseClick() {
-      result = ajaxCall('PUT','/games/{id}/pause');
+      result = ajaxCall('PUT', '/games/{id}/pause');
     }
 
-  // play button clicked (clock stop not added)
+    // play button clicked (clock stop not added)
     function playClick() {
-      result = ajaxCall('PUT','/games/{id}/play');
+      result = ajaxCall('PUT', '/games/{id}/play');
     }
 
     function getNextLevelTime() {
@@ -153,8 +177,9 @@
     }
 
     window.onload = function () {
-      var timerDisplay = document.querySelector('#time');
 
+      // var currentGame = getData(); // get the json data using the rest call in getData
+      getGameData.then(setupGameVariables);
       displayInfo(); //display the blinds,ante, and level
 
       if (isPaused == true) {
@@ -207,6 +232,7 @@
     </branding>
 
     <div id="gamePausedOverlay">PAUSED</div>
+    <div id="dataErrorOverlay">Error Loading</div>
 
   </page>
 </body>
