--- a/optui/public/timer.html
+++ b/optui/public/timer.html
@@ -12,7 +12,8 @@
 
   <script type="text/javascript">
 
-    var currentGame = getGameData();
+    var currentGame;
+    getGameData();
     var timerDisplay = document.querySelector('#time');
 
     var currentLevel,
