--- a/optui/public/timer.html
+++ b/optui/public/timer.html
@@ -14,7 +14,7 @@
 
     var currentGamePromise = getGameData();
     var currentGame = {};
-    var timerDisplay = document.querySelector('#time');
+    var timerDisplay;
 
     var currentLevel,
       currentLevelTime,
@@ -31,15 +31,19 @@
       currentBigBlind = currentGame.levels[currentLevel - 1].bigBlind;
       currentAnte = currentGame.levels[currentLevel - 1].ante;
       isPaused = currentGame.paused;
+      timerDisplay = document.querySelector('#timer');
     }
 
     function getGameData() {
       return $.ajax({
         url: "games/Sam", async: true, cache: false, success: function (result) {
-          currentGame = JSON.parse(result);
+            console.log("Current Game populated " , result);
+            currentGame = result;
+
         },
         error: function (xhr, status, error) {
           $(function () {
+            console.log("Error occured: ", currentGame)
             $("#dataErrorOverlay").show();
             $("page").css({ 'filter': 'blur(4px)' });
           });
