--- a/optui/public/timer.html
+++ b/optui/public/timer.html
@@ -15,7 +15,7 @@
             var currentGame = {};
             var timerDisplay;
             var currInterval;
-            var user = getCookie("email");
+            var user = getCookie("user");
 
             var currentLevel,
                 currentLevelTime,
