--- a/optui/public/timer.html
+++ b/optui/public/timer.html
@@ -11,10 +11,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <script type="text/javascript">
-
+    var id = 'Sam';
     var currentGame = {};
     var timerDisplay;
-
+    var currInterval;
     var currentLevel,
       currentLevelTime,
       currentSmallBlind,
@@ -36,7 +36,7 @@
     function getGameData() {
       return $.ajax({
         url: "games/Sam", cache: false, success: function (result) {
-            currentGame = result;
+          currentGame = result;
         },
         error: function (xhr, status, error) {
           $(function () {
@@ -72,13 +72,7 @@
 
         timerDisplay.textContent = minutes + ":" + seconds;
 
-        document.addEventListener("keypress", function () {
-          clearInterval(currInterval);
-          document.addEventListener("keypress", function () {
-            window.location.reload(true);
-          })
 
-        });
 
         if (diff < 6) {
           countDownSound.play();
@@ -100,7 +94,7 @@
         }
       };
 
-      var currInterval = setInterval(timer, 1000);
+      currInterval = setInterval(timer, 1000);
 
     } // end of StartTimer
 
@@ -125,63 +119,141 @@
     }
 
     window.onload = function () {
-        
-    getGameData().then(setupGameVariables).then(displayInfo).then( function() {
 
-            if (isPaused == true) {
-                // display the timer in its paused state
-                // does the same job as parseInt truncates the float
-                minutes = (currentLevelTime / 60) | 0;
-                seconds = (currentLevelTime % 60) | 0;
-                minutes = minutes < 10 ? minutes : minutes;
-                seconds = seconds < 10 ? "0" + seconds : seconds;
-                timerDisplay.textContent = minutes + ":" + seconds;
 
-                // display a PAUSED overlay on screen
-                $("#gamePausedOverlay").show();
-            } else {
-                startTimer(currentLevelTime, timerDisplay);
-            }
-        })
+      getGameData().then(setupGameVariables).then(displayInfo).then(function () {
+
+        if (isPaused == true) {
+          // display the timer in its paused state
+          // does the same job as parseInt truncates the float
+          minutes = (currentLevelTime / 60) | 0;
+          seconds = (currentLevelTime % 60) | 0;
+          minutes = minutes < 10 ? minutes : minutes;
+          seconds = seconds < 10 ? "0" + seconds : seconds;
+          timerDisplay.textContent = minutes + ":" + seconds;
+
+          // display a PAUSED overlay on screen
+          $("#gamePausedOverlay").show();
+        } else {
+          startTimer(currentLevelTime, timerDisplay);
+        }
+      })
+
+      vm.join();
+      document.onkeydown = function () {
+        vm.send();
+      }
+      document.onmousedown = function () {
+        vm.send();
+      }
     };
 
+
+    // adding the javascript required for socket connection
+    var vm = new Vue({
+
+      data: {
+        ws: null, // Our websocket
+        chatContent: '', // A running list of chat messages displayed on the screen
+        joined: false, // True if email  has been filled in
+        paused: false
+      },
+
+      created: function () {
+        console.log("test");
+        var self = this;
+        this.ws = new WebSocket('ws://' + window.location.host + '/ws');
+        this.ws.addEventListener('message', function (e) {
+          var msg = JSON.parse(e.data);
+          console.log('msg.email = ' + msg.email);
+          console.log('this mail = ' + id);
+          if (msg.email == id) {
+            if (msg.message == 'pause') {
+              this.paused = true;
+              clearInterval(currInterval);
+              isPaused = true;
+              // display a PAUSED overlay on screen
+              document.getElementById("gamePausedOverlay").style.visibility = "visible";
+              console.log(this.paused + 'paused');
+            }
+            else if (msg.message == 'play') {
+              this.paused = false;
+              console.log(this.paused + 'play');
+              window.location.reload(true);
+            }
+          }
+
+        });
+      },
+
+      // binding the methods to send and join the socket
+      methods: {
+        send: function () {
+          this.ws.send(
+            JSON.stringify({
+              email: id,
+              message: this.isPaused()
+            }
+            ));
+        },
+
+        join: function () {
+          this.joined = true;
+        },
+
+        isPaused: function () {
+          if (this.paused) {
+            this.paused = false;
+            return 'play';
+          }
+          else {
+            this.paused = true;
+            return 'pause';
+          }
+        }
+      }
+    });
+// end web socket code
+
   </script>
+
+
 
 </head>
 
 <body>
-  <page>
+    <page>
 
-    <controls>
-      <div>Level:
-        <span id="level"></span>
-      </div>
-      <div>
-        New Game
-      </div>
-    </controls>
+      <controls>
+        <div>Level:
+          <span id="level"></span>
+        </div>
+        <div>
+          New Game
+        </div>
+      </controls>
 
-    <timer id="time">
+      <timer id="time">
 
-    </timer>
+      </timer>
 
-    <currentBlindsAndAnte>
-      <blinds>Blinds:
-        <span id="blindValues"></span>
-      </blinds>
-      <ante>Ante:
-        <span id="anteValue"></span>
-      </ante>
-    </currentBlindsAndAnte>
+      <currentBlindsAndAnte>
+        <blinds>Blinds:
+          <span id="blindValues"></span>
+        </blinds>
+        <ante>Ante:
+          <span id="anteValue"></span>
+        </ante>
+      </currentBlindsAndAnte>
 
-    <branding>
-      <img src="img/emailtopia_logo-white-on-transparent.png" class="logo">
-    </branding>
+      <branding>
+        <img src="img/emailtopia_logo-white-on-transparent.png" class="logo">
+      </branding>
 
-    <div id="gamePausedOverlay">PAUSED</div>
-    <div id="dataErrorOverlay">Error Loading</div>
+      <div id="gamePausedOverlay">PAUSED</div>
+      <div id="dataErrorOverlay">Error Loading</div>
 
-  </page>
+    </page>
 </body>
 
 </html>
